@@ -6,6 +6,7 @@ import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.util.Optional;
 import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 public class GenericClassMetadataProviderFactory implements ClassMetadataProviderFactory<Method> {
     @Override
@@ -22,6 +23,6 @@ public class GenericClassMetadataProviderFactory implements ClassMetadataProvide
     public Iterable<Method> getNonStaticMethodsOnClass(Class<?> clazz) {
         return Stream.of(clazz.getDeclaredMethods())
                 .filter(method -> !Modifier.isStatic(method.getModifiers()))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
