@@ -4,6 +4,7 @@ import dev.langchain4j.agentic.scope.AgenticScope;
 
 import java.lang.reflect.Method;
 import java.util.Map;
+import java.util.Collections;
 
 final class SpecAgentInvoker extends AbstractAgentInvoker {
 
@@ -13,6 +14,6 @@ final class SpecAgentInvoker extends AbstractAgentInvoker {
 
     @Override
     public AgentInvocationArguments toInvocationArguments(AgenticScope agenticScope) {
-        return new AgentInvocationArguments(Map.of(), new Object[]{agenticScope});
+        return new AgentInvocationArguments(Collections.emptyMap(), new Object[]{agenticScope});
     }
 }
