@@ -19,6 +19,7 @@ import dev.langchain4j.model.anthropic.internal.client.AnthropicClient;
 import java.time.Duration;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Collections;
 
 /**
  * @since 1.4.0
@@ -52,7 +53,7 @@ public class AnthropicTokenCountEstimator implements TokenCountEstimator {
     public int estimateTokenCountInText(String text) {
         AnthropicCountTokensRequest request = AnthropicCountTokensRequest.builder()
                 .model(this.modelName)
-                .messages(List.of(new AnthropicMessage(AnthropicRole.USER, List.of(new AnthropicTextContent(text)))))
+                .messages(Collections.singletonList(new AnthropicMessage(AnthropicRole.USER, Collections.singletonList(new AnthropicTextContent(text)))))
                 .build();
 
         return client.countTokens(request).getInputTokens();
@@ -60,7 +61,7 @@ public class AnthropicTokenCountEstimator implements TokenCountEstimator {
 
     @Override
     public int estimateTokenCountInMessage(ChatMessage message) {
-        return estimateTokenCountInMessages(List.of(message));
+        return estimateTokenCountInMessages(Collections.singletonList(message));
     }
 
     @Override
@@ -85,8 +86,7 @@ public class AnthropicTokenCountEstimator implements TokenCountEstimator {
         if (!otherMessages.isEmpty()) {
             requestBuilder.messages(toAnthropicMessages(otherMessages));
         } else if (addDummyUserMessageIfNoUserMessages) {
-            requestBuilder.messages(List.of(
-                    new AnthropicMessage(AnthropicRole.USER, List.of(new AnthropicTextContent(dummyUserMessageText)))));
+            requestBuilder.messages(Collections.singletonList(new AnthropicMessage(AnthropicRole.USER, Collections.singletonList(new AnthropicTextContent(dummyUserMessageText)))));
         } else {
             throw new IllegalArgumentException("Anthropic countTokens requires at least one non-system message. "
                     + "Provided messages contained only system messages or were empty. To fix: add a UserMessage to "
