@@ -10,6 +10,7 @@ import dev.langchain4j.model.output.TokenUsage;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
+import java.util.Collections;
 
 class StreamingChatResponseBuilder {
 
@@ -19,17 +20,51 @@ class StreamingChatResponseBuilder {
 
     private volatile TokenUsage tokenUsage;
     private volatile FinishReason finishReason;
+     class TextAndFunctions {
+        private final String text;
+        private final List<FunctionCall> functionCalls;
 
-    record TextAndFunctions(String text, List<FunctionCall> functionCalls) {}
+        public TextAndFunctions(String text, List<FunctionCall> functionCalls) {
+            this.text = text;
+            this.functionCalls = functionCalls;
+        }
+
+        public String getText() {
+            return text;
+        }
+
+        public List<FunctionCall> getFunctionCalls() {
+            return functionCalls;
+        }
+
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;
+            TextAndFunctions that = (TextAndFunctions) o;
+            return java.util.Objects.equals(this.text, that.text) && java.util.Objects.equals(this.functionCalls, that.functionCalls);
+        }
+
+        @Override
+        public int hashCode() {
+            return java.util.Objects.hash(text, functionCalls);
+        }
+
+        @Override
+        public String toString() {
+            return "TextAndFunctions{"text=" + text + , "functionCalls=" + functionCalls + "}"";
+        }
+
+    }
 
     TextAndFunctions append(GenerateContentResponse partialResponse) {
         if (partialResponse == null) {
-            return new TextAndFunctions(null, List.of());
+            return new TextAndFunctions(null, Collections.emptyList());
         }
 
         List<Candidate> candidates = partialResponse.getCandidatesList();
         if (candidates.isEmpty() || candidates.get(0) == null) {
-            return new TextAndFunctions(null, List.of());
+            return new TextAndFunctions(null, Collections.emptyList());
         }
 
         String text = ResponseHandler.getText(partialResponse);
